--- a/src/Header.css
+++ b/src/Header.css
@@ -1,5 +1,13 @@
 .header{
+    top: 0;
+    position: sticky;
     display: flex;
+    justify-content: space-evenly;
+    border-bottom: 0.1px solid lightgray;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: 100%;
+    z-index: 999;
 }
 
 .header__left{
@@ -28,5 +36,9 @@
     border: none;
     background: none;
     
+}
+
+.header__right{
+    display: flex;
 }
 
