add some router functionalities

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,7 @@
     {{ title }}
   </h1>
   <app-button
+    *ngIf="hasRoute('/')"
     color="{{showAddTask ? 'red' : 'green' }}"
     text="{{showAddTask ? 'Close' : 'Add' }}"
     (btnClick)="toggleAddTask()"
